Added system prompt path key to yaml file

--- a/src/backend/agent/config/core/config1.yaml
+++ b/src/backend/agent/config/core/config1.yaml
@@ -4,6 +4,8 @@ params:
   top_p: 0.9
   max_retries: 1
 
+system_prompt: "core1.txt"
+
 metadata:
   model_name: "openai:gpt-4.1-nano"
   type: "core"
