--- a/src/backend/data/requirements.txt
+++ b/src/backend/data/requirements.txt
@@ -1,11 +1,12 @@
-kafka-python
-pymongo
-PyMuPDF
-requests
-tqdm
-python-dotenv
-typing_extensions
-tenacity
-tiktoken
-spacy
-pdfplumber
+kafka-python==2.2.15
+pymongo==4.13.2
+pymupdf==1.26.4
+pymupdf4llm==0.0.27
+requests==2.32.4
+tqdm==4.67.1
+python-dotenv==1.1.1
+typing_extensions==4.14.0
+tenacity==9.1.2
+tiktoken==0.9.0
+spacy==3.8.7
+pdfplumber==0.11.7
