--- a/src/backend/data/docker-compose.yaml
+++ b/src/backend/data/docker-compose.yaml
@@ -14,13 +14,14 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      KAFKA_LOG_RETENTION_HOURS: 168 # 7 day retention policy
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 10000
       KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS: 600000
     healthcheck:
-      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -35,9 +36,9 @@ services:
         condition: service_healthy
     command: >
       sh -c "
-        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic arxiv_papers --bootstrap-server kafka:9092 --partitions 8 --replication-factor 1
-        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic docs --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
-        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic chunks --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
+        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic parsing --bootstrap-server kafka:9092 --partitions 8 --replication-factor 1
+        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic extracting --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
+        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic chunking --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
         echo 'Topics created successfully'
       "
     networks:
@@ -55,13 +56,16 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+      mongo:
+        condition: service_healthy
     volumes:
       - ./harvester/data:/app/data
     networks:
       - messaging
+      - database
 
   parser:
-    build: 
+    build:
       context: .
       dockerfile: ./pdf_parser/Dockerfile
     env_file: ./.env
@@ -98,13 +102,13 @@ services:
     volumes:
       - mongo-data:/data/db
     healthcheck:
-      test: ["CMD-SHELL", "mongosh -u admin -p pass --eval 'db.adminCommand(\"ping\")' || exit 1"]
+      test: [ "CMD-SHELL", "mongosh -u admin -p pass --eval 'db.adminCommand(\"ping\")' || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
     networks:
       - database
-  
+
   loader:
     build:
       context: .
