--- a/src/backend/data/docker-compose.yaml
+++ b/src/backend/data/docker-compose.yaml
@@ -36,9 +36,7 @@ services:
         condition: service_healthy
     command: >
       sh -c "
-        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic parsing --bootstrap-server kafka:9092 --partitions 8 --replication-factor 1
         /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic extracting --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
-        /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic chunking --bootstrap-server kafka:9092 --partitions 3 --replication-factor 1
         echo 'Topics created successfully'
       "
     networks:
@@ -63,31 +61,6 @@ services:
     networks:
       - messaging
       - database
-
-  parser:
-    build:
-      context: .
-      dockerfile: ./pdf_parser/Dockerfile
-    env_file: ./.env
-    command: >
-      sh -c "
-        sleep $$((RANDOM % 30 + 5)) &&
-        python parser.py
-      "
-    environment:
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-    depends_on:
-      kafka:
-        condition: service_healthy
-      mongo:
-        condition: service_started
-      kafka-init:
-        condition: service_completed_successfully
-    networks:
-      - database
-      - messaging
-    deploy:
-      replicas: 4
 
   mongo:
     image: mongo:latest
@@ -127,25 +100,6 @@ services:
       - database
     restart: "no"
 
-  chunker:
-    build:
-      context: .
-      dockerfile: ./processing/Dockerfile.chunking
-    env_file: ./.env
-    environment:
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-    command: [ "python", "chunking.py", "--consumer-group", "${CONSUMER_GROUP_NAME}", "--collection-name", "${COLLECTION_NAME}", "--chunking-strategy", "${CHUNKING_STRATEGY}" ]
-    depends_on:
-      mongo:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
-    networks:
-      - messaging
-      - database
-    deploy:
-      replicas: 3
-
   kwe:
     build:
       context: .
@@ -158,9 +112,24 @@ services:
         condition: service_healthy
       kafka:
         condition: service_healthy
+    deploy:
+      replicas: 3
     networks:
       - messaging
       - database
+
+  text-index:
+    build:
+      context: .
+      dockerfile: ./mongo/Dockerfile.textindex
+    container_name: arxiv_text_index
+    env_file: ./.env
+    depends_on:
+      mongo:
+        condition: service_healthy
+    networks:
+      - database
+    restart: "no"
 
   vectorstore:
     build:
@@ -168,10 +137,12 @@ services:
       dockerfile: ./vectorstore/Dockerfile
     container_name: arxiv_vectorstore_builder
     env_file: ./.env
-    command: [ "--collection", "${COLLECTION_NAME}", "--index-type", "${FAISS_INDEX_TYPE:-flat}", "--embedding-model", "${EMBEDDING_MODEL:-sentence-transformers/all-MiniLM-L6-v2}", "--output-path", "/app/vectorstore_data", "--batch-size", "${BATCH_SIZE:-100}", "--limit", "200", "--storage-type", "mongodb" ]
+    command: [ "--collection", "${COLLECTION_NAME}", "--index-type", "${FAISS_INDEX_TYPE:-flat}", "--embedding-model", "${EMBEDDING_MODEL:-sentence-transformers/all-MiniLM-L6-v2}", "--output-path", "/app/vectorstore_data", "--batch-size", "${BATCH_SIZE:-100}", "--storage-type", "mongodb", "--limit", "40000" ]
     depends_on:
       mongo:
         condition: service_healthy
+      text-index:
+        condition: service_completed_successfully
     networks:
       - database
     restart: "no"
